horizontal scroll height fixed

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -45,7 +45,7 @@
 
 ::-webkit-scrollbar {
     display: none;
-    /*height: 5px;*/
+    height: 8px;
     width: 8px;
 }
 
